<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorBackground"
    tools:context="com.mercishoe.mercipos.MenuActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorUpperBackground"
        android:text="@string/menu_name"
        android:textColor="@color/colorAppname"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sale_button"
        android:layout_marginTop="30dp"
        android:text="@string/sale_name"
        android:textSize="20sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conclude_button"
        android:layout_marginTop="30dp"
        android:text="@string/conclude_name"
        android:textSize="20sp"/>

</LinearLayout>
