<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mercishoe.mercipos.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:padding="40dp"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTitle"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/colorAppname"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:hint="กรุณาใส่ชื่อ"
            android:nextFocusUp="@id/login_name"
            android:nextFocusLeft="@id/login_name"
            android:maxLength="10"
            android:background="@color/colorWhite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/password_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:hint="กรุณาใส่รหัส"
            android:maxLength="10"
            android:background="@color/colorWhite"
            android:inputType="textPassword"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branch_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/branch_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:hint="กรุณาใส่สาขา"
            android:maxLines="1"
            android:background="@color/colorWhite"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_name"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"/>

    </LinearLayout>




</ScrollView>

